// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`merged transactions are unchanged > 1252.qfx { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -20,
      "date": "2022-10-19",
      "imported_id": "cafe1252xx",
      "imported_payee": "Café Métro €uro",
      "notes": "Paiement 5€ — débit",
      "payee_name": "Café Métro €uro",
    },
  ],
}
`;

exports[`merged transactions are unchanged > 8859-1.qfx { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -20,
      "date": "2022-10-19",
      "imported_id": "wSoKuCS77",
      "imported_payee": "Paiement facture/Carte prépayée",
      "notes": "Mémo test: àÀçéÉèêëôû",
      "payee_name": "Paiement facture/Carte prépayée",
    },
  ],
}
`;

exports[`merged transactions are unchanged > best.data-ever$.QFX {} 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -30,
      "date": "2019-01-23",
      "imported_id": "00092990122-30.00019012312798.01",
      "imported_payee": "PATIENT FIRST TOKEN 01/22 PURCHA",
      "notes": null,
      "payee_name": "PATIENT FIRST TOKEN 01/22 PURCHA",
    },
    {
      "amount": -3.77,
      "date": "2019-01-23",
      "imported_id": "00092990121-3.77019012312828.01",
      "imported_payee": "STARBUCKS STORE 07604 01/21 PURC",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 01/21 PURC",
    },
    {
      "amount": -9.62,
      "date": "2019-01-23",
      "imported_id": "00092990121-9.62019012312831.78",
      "imported_payee": "STARBUCKS STORE 07604 01/21 PURC",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 01/21 PURC",
    },
    {
      "amount": -115.99,
      "date": "2019-01-22",
      "imported_id": "00090231800-115.99019012212841.40",
      "imported_payee": "VERIZON DES:PAYMENTREC ID:XXXXX3",
      "notes": null,
      "payee_name": "VERIZON DES:PAYMENTREC ID:XXXXX3",
    },
    {
      "amount": -10.34,
      "date": "2019-01-22",
      "imported_id": "00092990120-10.34019012212957.39",
      "imported_payee": "URBAN FARMHOUSE NO 2 01/19 PURCH",
      "notes": null,
      "payee_name": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    },
    {
      "amount": -22.53,
      "date": "2019-01-22",
      "imported_id": "00092990120-22.53019012212967.73",
      "imported_payee": "URBAN FARMHOUSE NO 2 01/19 PURCH",
      "notes": null,
      "payee_name": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    },
    {
      "amount": -108.71,
      "date": "2019-01-22",
      "imported_id": "00092990119-108.71019012212990.26",
      "imported_payee": "TMOBILE*AUTO PAY 01/19 PURCHASE",
      "notes": null,
      "payee_name": "TMOBILE*AUTO PAY 01/19 PURCHASE",
    },
    {
      "amount": -25,
      "date": "2019-01-22",
      "imported_id": "00092990118-25.00019012213098.97",
      "imported_payee": "COUNTY WASTE 01/18 PURCHASE 804-",
      "notes": null,
      "payee_name": "COUNTY WASTE 01/18 PURCHASE 804-",
    },
    {
      "amount": -32.38,
      "date": "2019-01-22",
      "imported_id": "00092990118-32.38019012213123.97",
      "imported_payee": "REGENCY MART CITGO 01/18 PURCHAS",
      "notes": null,
      "payee_name": "REGENCY MART CITGO 01/18 PURCHAS",
    },
    {
      "amount": -6.07,
      "date": "2019-01-22",
      "imported_id": "00092990117-6.07019012213156.35",
      "imported_payee": "CHICK-FIL-A #01342 01/17 PURCHAS",
      "notes": null,
      "payee_name": "CHICK-FIL-A #01342 01/17 PURCHAS",
    },
  ],
}
`;

exports[`merged transactions are unchanged > big.data.QiF {} 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -25,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "COUNTY WASTE 12/18 PURCHASE 804-8439288 VA",
      "notes": null,
      "payee_name": "COUNTY WASTE 12/18 PURCHASE 804-8439288 VA",
    },
    {
      "amount": -45,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "MANGO SALON - LIBBIE GR 12/18 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "MANGO SALON - LIBBIE GR 12/18 PURCHASE RICHMOND VA",
    },
    {
      "amount": -31.33,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "LOFT 0845 CHES 12/19 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "LOFT 0845 CHES 12/19 PURCHASE RICHMOND VA",
    },
    {
      "amount": -6.31,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "TARGET T- 1130 12/19 PURCHASE Richmond VA",
      "notes": null,
      "payee_name": "TARGET T- 1130 12/19 PURCHASE Richmond VA",
    },
    {
      "amount": -41.92,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "TARGET DEBIT CRD ACH TRAN CO ID:XXXXX15170 POS TARGET -1018 RICHMOND V",
      "notes": null,
      "payee_name": "TARGET DEBIT CRD ACH TRAN CO ID:XXXXX15170 POS TARGET -1018 RICHMOND V",
    },
    {
      "amount": -24.01,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9321 CO I",
      "notes": null,
      "payee_name": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9321 CO I",
    },
    {
      "amount": -12,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9703 CO I",
      "notes": null,
      "payee_name": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9703 CO I",
    },
    {
      "amount": 874.85,
      "category": null,
      "date": "12/20/18",
      "imported_payee": "BKOFAMERICA MOBILE 12/20 3705340250 DEPOSIT *MOBILE VA",
      "notes": null,
      "payee_name": "BKOFAMERICA MOBILE 12/20 3705340250 DEPOSIT *MOBILE VA",
    },
    {
      "amount": -12.63,
      "category": null,
      "date": "12/20/18",
      "imported_payee": "AMAZON.COM*M21KD0HA0 AM 12/19 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M21KD0HA0 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -36,
      "category": null,
      "date": "12/20/18",
      "imported_payee": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 6486 CO I",
      "notes": null,
      "payee_name": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 6486 CO I",
    },
    {
      "amount": -5.21,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
    },
    {
      "amount": -34.7,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMAZON.COM*M236431E2 AM 12/19 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M236431E2 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -5.41,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
    },
    {
      "amount": -105.29,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMAZON.COM*M208P98U1 AM 12/19 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M208P98U1 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -7.36,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMAZON.COM*M29QF7M71 AM 12/19 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M29QF7M71 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -12.85,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMAZON.COM*M20VB1851 AM 12/20 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M20VB1851 AM 12/20 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -12.99,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMZN MKTP US*M27HH51C2 12/20 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMZN MKTP US*M27HH51C2 12/20 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -62.78,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "CVS/PHARM 0154 12/21 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "CVS/PHARM 0154 12/21 PURCHASE RICHMOND VA",
    },
  ],
}
`;

exports[`merged transactions are unchanged > camt/camt.053.payee-memo.xml { swapPayeeAndMemo: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -10,
      "date": "2019-01-23",
      "imported_id": "test-payee-and-notes",
      "imported_payee": "Note Text",
      "notes": null,
      "payee_name": "Note Text",
    },
    {
      "amount": -20,
      "date": "2019-01-23",
      "imported_id": "test-payee-only",
      "imported_payee": "Payee Name Only",
      "notes": null,
      "payee_name": "Payee Name Only",
    },
    {
      "amount": -30,
      "date": "2019-01-23",
      "imported_id": "test-notes-only",
      "imported_payee": "Note Only Text",
      "notes": null,
      "payee_name": "Note Only Text",
    },
    {
      "amount": -40,
      "date": "2019-01-23",
      "imported_id": "test-neither",
      "imported_payee": null,
      "notes": null,
      "payee_name": null,
    },
  ],
}
`;

exports[`merged transactions are unchanged > camt/camt.053.xml { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": 0.6,
      "date": "2013-12-30",
      "imported_id": "2013123001153870000",
      "imported_payee": "Testkonto Nummer 2",
      "notes": "Sammler aus Testknto 2 Zweite Ueberweisung EREF:
                                STZV-EtE28122013-11:29-1 IBAN: DE58740618130100033626 BIC:
                                GENODEF1PFK ABWE: Testkonto 1",
      "payee_name": "Testkonto Nummer 2",
    },
    {
      "amount": 0.5,
      "date": "2013-12-30",
      "imported_id": "2013123001153870001",
      "imported_payee": "Testkonto Nummer 2",
      "notes": "Sammler aus Testkonto 2 Erste Ueberweisung EREF:
                                STZV-EtE28122013-11:29-2 IBAN: DE58740618130100033626 BIC:
                                GENODEF1PFK ABWE: Testkonto 1",
      "payee_name": "Testkonto Nummer 2",
    },
    {
      "amount": -89.85,
      "date": "2024-03-11",
      "imported_id": "640387810124072/2",
      "imported_payee": "Supermarkt A",
      "notes": null,
      "payee_name": "Supermarkt A",
    },
    {
      "amount": 1.2,
      "date": "2014-01-05",
      "imported_id": "2014010509572410000",
      "imported_payee": null,
      "notes": "Retoure SEPA Lastschrift vom 03.01.2014, Rueckgabegrund: MD06
                                Lastschriftwiderspruch durch den Zahlungspflichtigen EREF:
                                STZV-EtE27122013-11 :05-2 CRED: DE79ZZZ00000000584 IBAN: DE14740618130000033626 BIC:
                                GENODEF1PFK ABWE: Testkonto",
      "payee_name": null,
    },
    {
      "amount": -80,
      "date": "2024-03-12",
      "imported_id": "367406715024072/1",
      "imported_payee": "Rega",
      "notes": null,
      "payee_name": "Rega",
    },
    {
      "amount": 2.25,
      "date": "2014-01-03",
      "imported_payee": "Testkonto Nummer 2",
      "notes": "Lastschrift 2. Zahlung TAN:747216 ",
      "payee_name": "Testkonto Nummer 2",
    },
    {
      "amount": 1.2,
      "date": "2014-01-03",
      "imported_payee": "Testkonto Nummer 2",
      "notes": "Lastschrift 1. Zahlung TAN:747216 ",
      "payee_name": "Testkonto Nummer 2",
    },
  ],
}
`;

exports[`merged transactions are unchanged > camt/camt.latin1.xml { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": 100,
      "date": "2025-09-09",
      "imported_id": "2025090900000000",
      "imported_payee": "DAUERAUFTRAG",
      "notes": "M-Überschusssparen",
      "payee_name": "DAUERAUFTRAG",
    },
    {
      "amount": -5,
      "date": "2025-09-09",
      "imported_id": "2025090900000001",
      "imported_payee": "Grüße aus München",
      "notes": "Restaurant Schrödingers Katze und Café Ünique",
      "payee_name": "Grüße aus München",
    },
  ],
}
`;

exports[`merged transactions are unchanged > credit-card.ofx { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -6,
      "date": "2023-03-30",
      "imported_id": "57f91dca-0460-4692-be90-84165b7002",
      "imported_payee": "LOUISIANA STATE MUSEUM751 PLACE JOHN PAUL NEW ORLEANS 70116-3205LA USA",
      "notes": null,
      "payee_name": "LOUISIANA STATE MUSEUM751 PLACE JOHN PAUL NEW ORLEANS 70116-3205LA USA",
    },
  ],
}
`;

exports[`merged transactions are unchanged > data.ofx { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -30,
      "date": "2019-01-23",
      "imported_id": "00092990122-30.00019012312798.01",
      "imported_payee": "PATIENT FIRST TOKEN 01/22 PURCHA",
      "notes": null,
      "payee_name": "PATIENT FIRST TOKEN 01/22 PURCHA",
    },
    {
      "amount": -3.77,
      "date": "2019-01-23",
      "imported_id": "00092990121-3.77019012312828.01",
      "imported_payee": "STARBUCKS STORE 07604 01/21 PURC",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 01/21 PURC",
    },
    {
      "amount": -9.62,
      "date": "2019-01-23",
      "imported_id": "00092990121-9.62019012312831.78",
      "imported_payee": "STARBUCKS STORE 07604 01/21 PURC",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 01/21 PURC",
    },
    {
      "amount": -115.99,
      "date": "2019-01-22",
      "imported_id": "00090231800-115.99019012212841.40",
      "imported_payee": "VERIZON DES:PAYMENTREC ID:XXXXX3",
      "notes": null,
      "payee_name": "VERIZON DES:PAYMENTREC ID:XXXXX3",
    },
    {
      "amount": -10.34,
      "date": "2019-01-22",
      "imported_id": "00092990120-10.34019012212957.39",
      "imported_payee": "URBAN FARMHOUSE NO 2 01/19 PURCH",
      "notes": null,
      "payee_name": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    },
    {
      "amount": -22.53,
      "date": "2019-01-22",
      "imported_id": "00092990120-22.53019012212967.73",
      "imported_payee": "URBAN FARMHOUSE NO 2 01/19 PURCH",
      "notes": null,
      "payee_name": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    },
    {
      "amount": -108.71,
      "date": "2019-01-22",
      "imported_id": "00092990119-108.71019012212990.26",
      "imported_payee": "TMOBILE*AUTO PAY 01/19 PURCHASE",
      "notes": null,
      "payee_name": "TMOBILE*AUTO PAY 01/19 PURCHASE",
    },
    {
      "amount": -25,
      "date": "2019-01-22",
      "imported_id": "00092990118-25.00019012213098.97",
      "imported_payee": "COUNTY WASTE 01/18 PURCHASE 804-",
      "notes": null,
      "payee_name": "COUNTY WASTE 01/18 PURCHASE 804-",
    },
    {
      "amount": -32.38,
      "date": "2019-01-22",
      "imported_id": "00092990118-32.38019012213123.97",
      "imported_payee": "REGENCY MART CITGO 01/18 PURCHAS",
      "notes": null,
      "payee_name": "REGENCY MART CITGO 01/18 PURCHAS",
    },
    {
      "amount": -6.07,
      "date": "2019-01-22",
      "imported_id": "00092990117-6.07019012213156.35",
      "imported_payee": "CHICK-FIL-A #01342 01/17 PURCHAS",
      "notes": null,
      "payee_name": "CHICK-FIL-A #01342 01/17 PURCHAS",
    },
  ],
}
`;

exports[`merged transactions are unchanged > data.qfx { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -30,
      "date": "2019-01-23",
      "imported_id": "00092990122-30.00019012312798.01",
      "imported_payee": "PATIENT FIRST TOKEN 01/22 PURCHA",
      "notes": null,
      "payee_name": "PATIENT FIRST TOKEN 01/22 PURCHA",
    },
    {
      "amount": -3.77,
      "date": "2019-01-23",
      "imported_id": "00092990121-3.77019012312828.01",
      "imported_payee": "STARBUCKS STORE 07604 01/21 PURC",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 01/21 PURC",
    },
    {
      "amount": -9.62,
      "date": "2019-01-23",
      "imported_id": "00092990121-9.62019012312831.78",
      "imported_payee": "STARBUCKS STORE 07604 01/21 PURC",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 01/21 PURC",
    },
    {
      "amount": -115.99,
      "date": "2019-01-22",
      "imported_id": "00090231800-115.99019012212841.40",
      "imported_payee": "VERIZON DES:PAYMENTREC ID:XXXXX3",
      "notes": null,
      "payee_name": "VERIZON DES:PAYMENTREC ID:XXXXX3",
    },
    {
      "amount": -10.34,
      "date": "2019-01-22",
      "imported_id": "00092990120-10.34019012212957.39",
      "imported_payee": "URBAN FARMHOUSE NO 2 01/19 PURCH",
      "notes": null,
      "payee_name": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    },
    {
      "amount": -22.53,
      "date": "2019-01-22",
      "imported_id": "00092990120-22.53019012212967.73",
      "imported_payee": "URBAN FARMHOUSE NO 2 01/19 PURCH",
      "notes": null,
      "payee_name": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    },
    {
      "amount": -108.71,
      "date": "2019-01-22",
      "imported_id": "00092990119-108.71019012212990.26",
      "imported_payee": "TMOBILE*AUTO PAY 01/19 PURCHASE",
      "notes": null,
      "payee_name": "TMOBILE*AUTO PAY 01/19 PURCHASE",
    },
    {
      "amount": -25,
      "date": "2019-01-22",
      "imported_id": "00092990118-25.00019012213098.97",
      "imported_payee": "COUNTY WASTE 01/18 PURCHASE 804-",
      "notes": null,
      "payee_name": "COUNTY WASTE 01/18 PURCHASE 804-",
    },
    {
      "amount": -32.38,
      "date": "2019-01-22",
      "imported_id": "00092990118-32.38019012213123.97",
      "imported_payee": "REGENCY MART CITGO 01/18 PURCHAS",
      "notes": null,
      "payee_name": "REGENCY MART CITGO 01/18 PURCHAS",
    },
    {
      "amount": -6.07,
      "date": "2019-01-22",
      "imported_id": "00092990117-6.07019012213156.35",
      "imported_payee": "CHICK-FIL-A #01342 01/17 PURCHAS",
      "notes": null,
      "payee_name": "CHICK-FIL-A #01342 01/17 PURCHAS",
    },
  ],
}
`;

exports[`merged transactions are unchanged > data.qif { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -25,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "COUNTY WASTE 12/18 PURCHASE 804-8439288 VA",
      "notes": null,
      "payee_name": "COUNTY WASTE 12/18 PURCHASE 804-8439288 VA",
    },
    {
      "amount": -45,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "õSSELDORF KÖLN SALON - LIBBIE GR 12/18 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "õSSELDORF KÖLN SALON - LIBBIE GR 12/18 PURCHASE RICHMOND VA",
    },
    {
      "amount": -31.33,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "LOFT 0845 CHES 12/19 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "LOFT 0845 CHES 12/19 PURCHASE RICHMOND VA",
    },
    {
      "amount": -6.31,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "TARGET T- 1130 12/19 PURCHASE Richmond VA",
      "notes": null,
      "payee_name": "TARGET T- 1130 12/19 PURCHASE Richmond VA",
    },
    {
      "amount": -41.92,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "TARGET DEBIT CRD ACH TRAN CO ID:XXXXX15170 POS TARGET -1018 RICHMOND V",
      "notes": null,
      "payee_name": "TARGET DEBIT CRD ACH TRAN CO ID:XXXXX15170 POS TARGET -1018 RICHMOND V",
    },
    {
      "amount": -24.01,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9321 CO I",
      "notes": null,
      "payee_name": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9321 CO I",
    },
    {
      "amount": -12,
      "category": null,
      "date": "12/19/18",
      "imported_payee": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9703 CO I",
      "notes": null,
      "payee_name": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9703 CO I",
    },
    {
      "amount": 874.85,
      "category": null,
      "date": "12/20/18",
      "imported_payee": "BKOFAMERICA MOBILE 12/20 3705340250 DEPOSIT *MOBILE VA",
      "notes": null,
      "payee_name": "BKOFAMERICA MOBILE 12/20 3705340250 DEPOSIT *MOBILE VA",
    },
    {
      "amount": -12.63,
      "category": null,
      "date": "12/20/18",
      "imported_payee": "AMAZON.COM*M21KD0HA0 AM 12/19 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M21KD0HA0 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -36,
      "category": null,
      "date": "12/20/18",
      "imported_payee": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 6486 CO I",
      "notes": null,
      "payee_name": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 6486 CO I",
    },
    {
      "amount": -5.21,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
    },
    {
      "amount": -34.7,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMAZON.COM*M236431E2 AM 12/19 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M236431E2 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -5.41,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
    },
    {
      "amount": -105.29,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMAZON.COM*M208P98U1 AM 12/19 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M208P98U1 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -7.36,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMAZON.COM*M29QF7M71 AM 12/19 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M29QF7M71 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -12.85,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMAZON.COM*M20VB1851 AM 12/20 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMAZON.COM*M20VB1851 AM 12/20 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -12.99,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "AMZN MKTP US*M27HH51C2 12/20 PURCHASE AMZN.COM/BILL WA",
      "notes": null,
      "payee_name": "AMZN MKTP US*M27HH51C2 12/20 PURCHASE AMZN.COM/BILL WA",
    },
    {
      "amount": -62.78,
      "category": null,
      "date": "12/21/18",
      "imported_payee": "CVS/PHARM 0154 12/21 PURCHASE RICHMOND VA",
      "notes": null,
      "payee_name": "CVS/PHARM 0154 12/21 PURCHASE RICHMOND VA",
    },
  ],
}
`;

exports[`merged transactions are unchanged > data-multi-decimal.ofx {} 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -30,
      "date": "2019-01-23",
      "imported_id": "00092990122-30.00019012312798.01",
      "imported_payee": "PATIENT FIRST TOKEN 01/22 PURCHA",
      "notes": null,
      "payee_name": "PATIENT FIRST TOKEN 01/22 PURCHA",
    },
    {
      "amount": -3.77,
      "date": "2019-01-23",
      "imported_id": "00092990121-3.77019012312828.01",
      "imported_payee": "STARBUCKS STORE 07604 01/21 PURC",
      "notes": null,
      "payee_name": "STARBUCKS STORE 07604 01/21 PURC",
    },
  ],
}
`;

exports[`merged transactions are unchanged > data-payee-memo.ofx { swapPayeeAndMemo: true, …(1) } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -10,
      "date": "2019-01-23",
      "imported_id": "test-name-and-memo",
      "imported_payee": "Memo Text",
      "notes": "Payee Name",
      "payee_name": "Memo Text",
    },
    {
      "amount": -20,
      "date": "2019-01-23",
      "imported_id": "test-name-only",
      "imported_payee": null,
      "notes": "Payee Name Only",
      "payee_name": null,
    },
    {
      "amount": -30,
      "date": "2019-01-23",
      "imported_id": "test-memo-only",
      "imported_payee": "Memo Only Text",
      "notes": null,
      "payee_name": "Memo Only Text",
    },
    {
      "amount": -40,
      "date": "2019-01-23",
      "imported_id": "test-neither",
      "imported_payee": null,
      "notes": null,
      "payee_name": null,
    },
  ],
}
`;

exports[`merged transactions are unchanged > data-payee-memo.ofx { …(2) } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -10,
      "date": "2019-01-23",
      "imported_id": "test-name-and-memo",
      "imported_payee": "Payee Name",
      "notes": "Memo Text",
      "payee_name": "Payee Name",
    },
    {
      "amount": -20,
      "date": "2019-01-23",
      "imported_id": "test-name-only",
      "imported_payee": "Payee Name Only",
      "notes": null,
      "payee_name": "Payee Name Only",
    },
    {
      "amount": -30,
      "date": "2019-01-23",
      "imported_id": "test-memo-only",
      "imported_payee": "Memo Only Text",
      "notes": null,
      "payee_name": "Memo Only Text",
    },
    {
      "amount": -40,
      "date": "2019-01-23",
      "imported_id": "test-neither",
      "imported_payee": undefined,
      "notes": null,
      "payee_name": undefined,
    },
  ],
}
`;

exports[`merged transactions are unchanged > data-payee-memo.qif { swapPayeeAndMemo: true, …(1) } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -10,
      "category": null,
      "date": "01/23/2019",
      "imported_payee": "Note Text",
      "notes": "Payee Name",
      "payee_name": "Note Text",
    },
    {
      "amount": -20,
      "category": null,
      "date": "01/23/2019",
      "imported_payee": "Payee Name Only",
      "notes": null,
      "payee_name": "Payee Name Only",
    },
    {
      "amount": -30,
      "category": null,
      "date": "01/23/2019",
      "imported_payee": "Note Only Text",
      "notes": null,
      "payee_name": "Note Only Text",
    },
    {
      "amount": -40,
      "category": null,
      "date": "01/23/2019",
      "imported_payee": undefined,
      "notes": null,
      "payee_name": undefined,
    },
  ],
}
`;

exports[`merged transactions are unchanged > html-vals.qfx { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -1,
      "date": "2023-05-09",
      "imported_id": "23129130032333396279270000",
      "imported_payee": "000000000000000",
      "notes": "PREAUTHORIZED DEBIT;B.C. HYDRO & POWER AUTHORITY;Electronic Funds Transfer",
      "payee_name": "000000000000000",
    },
    {
      "amount": -1,
      "date": "2023-03-01",
      "imported_id": "23060061032549554596530000",
      "imported_payee": "TPAY &lt;DEFTPYMT&gt;",
      "notes": "PREAUTHORIZED DEBIT;LUXMORE REALTY PPTY MGMT;Electronic Funds Transfer",
      "payee_name": "TPAY &lt;DEFTPYMT&gt;",
    },
  ],
}
`;

exports[`merged transactions are unchanged > qif-category.qif {} 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -100.58,
      "category": "Shopping",
      "date": "6/24/2024",
      "imported_payee": "Outlet",
      "notes": null,
      "payee_name": "Outlet",
    },
    {
      "amount": -20.15,
      "category": "Groceries",
      "date": "6/23/2024",
      "imported_payee": "GroceriesYou",
      "notes": null,
      "payee_name": "GroceriesYou",
    },
  ],
}
`;

exports[`merged transactions are unchanged > utf-8.qfx { importNotes: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "amount": -20,
      "date": "2022-10-19",
      "imported_id": "cafeUtf8xx",
      "imported_payee": "Café Métro €uro",
      "notes": "Paiement 5€ — débit",
      "payee_name": "Café Métro €uro",
    },
  ],
}
`;

exports[`merged transactions are unchanged > utf-8-bom.csv { hasHeaderRow: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "Cím": "",
      "Devizanem": "HUF",
      "Digitalizált kártya száma": "",
      "Dátum": "",
      "Felhasználónév": "tariff package name",
      "Hitel azonosító": "",
      "Kategória": "",
      "Kedvenc": "0",
      "Kártya típusa": "",
      "Kártyaszám": "",
      "Könyvelés dátuma": "2025.12.04",
      "Könyvelési információk": "",
      "Közlemény": "",
      "Küldő címe": "",
      "Megjegyzés": "",
      "Mobilapplikáció": "",
      "Partner IBAN száma": "",
      "Partner bankkódja": "",
      "Partner címe": "",
      "Partner név": "",
      "Partner számlaszáma": "",
      "Számlaegyenleg": "",
      "Számlaszám": "11600006-XXXXXXXX-XXXXXXXX",
      "Termék típusa": "",
      "Tranzakció dátuma és ideje": "",
      "Tranzakció elfogadásának típusa": "",
      "Tranzakció típusa": "",
      "Tranzakcióazonosító": "",
      "Összeg": "100",
    },
    {
      "Cím": "",
      "Devizanem": "HUF",
      "Digitalizált kártya száma": "",
      "Dátum": "",
      "Felhasználónév": "tariff package name",
      "Hitel azonosító": "",
      "Kategória": "",
      "Kedvenc": "0",
      "Kártya típusa": "",
      "Kártyaszám": "",
      "Könyvelés dátuma": "2025.12.01",
      "Könyvelési információk": "",
      "Közlemény": "",
      "Küldő címe": "",
      "Megjegyzés": "",
      "Mobilapplikáció": "",
      "Partner IBAN száma": "",
      "Partner bankkódja": "",
      "Partner címe": "",
      "Partner név": "",
      "Partner számlaszáma": "",
      "Számlaegyenleg": "",
      "Számlaszám": "11600006-XXXXXXXX-XXXXXXXX",
      "Termék típusa": "",
      "Tranzakció dátuma és ideje": "",
      "Tranzakció elfogadásának típusa": "",
      "Tranzakció típusa": "",
      "Tranzakcióazonosító": "",
      "Összeg": "100",
    },
  ],
}
`;

exports[`merged transactions are unchanged > utf-16be.csv { hasHeaderRow: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "Cím": "",
      "Devizanem": "HUF",
      "Digitalizált kártya száma": "",
      "Dátum": "",
      "Felhasználónév": "tariff package name",
      "Hitel azonosító": "",
      "Kategória": "",
      "Kedvenc": "0",
      "Kártya típusa": "",
      "Kártyaszám": "",
      "Könyvelés dátuma": "2025.12.04",
      "Könyvelési információk": "",
      "Közlemény": "",
      "Küldő címe": "",
      "Megjegyzés": "",
      "Mobilapplikáció": "",
      "Partner IBAN száma": "",
      "Partner bankkódja": "",
      "Partner címe": "",
      "Partner név": "",
      "Partner számlaszáma": "",
      "Számlaegyenleg": "",
      "Számlaszám": "11600006-XXXXXXXX-XXXXXXXX",
      "Termék típusa": "",
      "Tranzakció dátuma és ideje": "",
      "Tranzakció elfogadásának típusa": "",
      "Tranzakció típusa": "",
      "Tranzakcióazonosító": "",
      "Összeg": "100",
    },
    {
      "Cím": "",
      "Devizanem": "HUF",
      "Digitalizált kártya száma": "",
      "Dátum": "",
      "Felhasználónév": "tariff package name",
      "Hitel azonosító": "",
      "Kategória": "",
      "Kedvenc": "0",
      "Kártya típusa": "",
      "Kártyaszám": "",
      "Könyvelés dátuma": "2025.12.01",
      "Könyvelési információk": "",
      "Közlemény": "",
      "Küldő címe": "",
      "Megjegyzés": "",
      "Mobilapplikáció": "",
      "Partner IBAN száma": "",
      "Partner bankkódja": "",
      "Partner címe": "",
      "Partner név": "",
      "Partner számlaszáma": "",
      "Számlaegyenleg": "",
      "Számlaszám": "11600006-XXXXXXXX-XXXXXXXX",
      "Termék típusa": "",
      "Tranzakció dátuma és ideje": "",
      "Tranzakció elfogadásának típusa": "",
      "Tranzakció típusa": "",
      "Tranzakcióazonosító": "",
      "Összeg": "100",
    },
  ],
}
`;

exports[`merged transactions are unchanged > utf-16le.csv { hasHeaderRow: true } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "Cím": "",
      "Devizanem": "HUF",
      "Digitalizált kártya száma": "",
      "Dátum": "",
      "Felhasználónév": "tariff package name",
      "Hitel azonosító": "",
      "Kategória": "",
      "Kedvenc": "0",
      "Kártya típusa": "",
      "Kártyaszám": "",
      "Könyvelés dátuma": "2025.12.04",
      "Könyvelési információk": "",
      "Közlemény": "",
      "Küldő címe": "",
      "Megjegyzés": "",
      "Mobilapplikáció": "",
      "Partner IBAN száma": "",
      "Partner bankkódja": "",
      "Partner címe": "",
      "Partner név": "",
      "Partner számlaszáma": "",
      "Számlaegyenleg": "",
      "Számlaszám": "11600006-XXXXXXXX-XXXXXXXX",
      "Termék típusa": "",
      "Tranzakció dátuma és ideje": "",
      "Tranzakció elfogadásának típusa": "",
      "Tranzakció típusa": "",
      "Tranzakcióazonosító": "",
      "Összeg": "100",
    },
    {
      "Cím": "",
      "Devizanem": "HUF",
      "Digitalizált kártya száma": "",
      "Dátum": "",
      "Felhasználónév": "tariff package name",
      "Hitel azonosító": "",
      "Kategória": "",
      "Kedvenc": "0",
      "Kártya típusa": "",
      "Kártyaszám": "",
      "Könyvelés dátuma": "2025.12.01",
      "Könyvelési információk": "",
      "Közlemény": "",
      "Küldő címe": "",
      "Megjegyzés": "",
      "Mobilapplikáció": "",
      "Partner IBAN száma": "",
      "Partner bankkódja": "",
      "Partner címe": "",
      "Partner név": "",
      "Partner számlaszáma": "",
      "Számlaegyenleg": "",
      "Számlaszám": "11600006-XXXXXXXX-XXXXXXXX",
      "Termék típusa": "",
      "Tranzakció dátuma és ideje": "",
      "Tranzakció elfogadásának típusa": "",
      "Tranzakció típusa": "",
      "Tranzakcióazonosító": "",
      "Összeg": "100",
    },
  ],
}
`;

exports[`merged transactions are unchanged > windows-1252.csv { hasHeaderRow: true, …(1) } 1`] = `
{
  "errors": [],
  "transactions": [
    {
      "Amount": "100.25",
      "Date": "2025.12.04",
      "Payee": "Café Rémy",
    },
    {
      "Amount": "-42.10",
      "Date": "2025.12.05",
      "Payee": "Boulangerie Müller",
    },
  ],
}
`;
